crates/sdk-core/tests/workflows_trybuild/async_query_fail.stderr
error: #[query] methods must not be async (queries are synchronous)
  --> tests/workflows_trybuild/async_query_fail.rs:15:9
   |
15 |     pub async fn get_value(&self, _ctx: &WfContext) -> u32 {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `WfContext`, `WfExitValue`, and `WorkflowResult`
 --> tests/workflows_trybuild/async_query_fail.rs:2:22
  |
2 | use temporalio_sdk::{WfContext, WfExitValue, WorkflowResult};
  |                      ^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
